[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Missions/Mission3.gd" type="Script" id=1]
[ext_resource path="res://data/missions/mission3/breadboard.png" type="Texture" id=2]
[ext_resource path="res://data/Roboto-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Mission3" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonLeft" type="Polygon2D" parent="."]
position = Vector2( -616.357, -237.738 )
scale = Vector2( 0.291911, 0.291912 )
color = Color( 0.0470588, 0.239216, 0.447059, 1 )
offset = Vector2( 467.083, 952.083 )
polygon = PoolVector2Array( 147.191, 355.426, 147.191, 451.318, 352.459, 452.816, 352.099, 355.388 )

[node name="ButtonRight" type="Polygon2D" parent="."]
position = Vector2( -5.73743, -235.493 )
scale = Vector2( 0.291911, 0.291912 )
color = Color( 0.0470588, 0.239216, 0.447059, 1 )
offset = Vector2( 467.083, 952.083 )
polygon = PoolVector2Array( 147.191, 355.426, 147.191, 451.318, 352.459, 452.816, 352.099, 355.388 )

[node name="Light1" type="Polygon2D" parent="."]
position = Vector2( -646.416, -28.4967 )
scale = Vector2( 0.438077, 0.438077 )
color = Color( 0.760784, 0.87451, 0.101961, 0 )
polygon = PoolVector2Array( 675.771, 251.819, 686.883, 286.742, 712.281, 334.364, 751.966, 366.112, 801.176, 381.986, 845.623, 378.811, 896.42, 358.175, 928.168, 326.427, 953.566, 278.805, 956.741, 231.183, 944.042, 183.561, 920.231, 148.638, 871.021, 116.89, 823.399, 105.778, 778.952, 112.128, 742.442, 129.589, 707.519, 156.575, 682.12, 204.197 )

[node name="Light2" type="Polygon2D" parent="."]
position = Vector2( -528.557, -102.579 )
scale = Vector2( 0.438077, 0.438077 )
color = Color( 0.760784, 0.87451, 0.101961, 0 )
polygon = PoolVector2Array( 675.771, 251.819, 686.883, 286.742, 712.281, 334.364, 751.966, 366.112, 801.176, 381.986, 845.623, 378.811, 896.42, 358.175, 928.168, 326.427, 953.566, 278.805, 956.741, 231.183, 944.042, 183.561, 920.231, 148.638, 871.021, 116.89, 823.399, 105.778, 778.952, 112.128, 742.442, 129.589, 707.519, 156.575, 682.12, 204.197 )

[node name="Light3" type="Polygon2D" parent="."]
position = Vector2( -409.577, -29.6191 )
scale = Vector2( 0.438077, 0.438077 )
color = Color( 0.760784, 0.87451, 0.101961, 0 )
polygon = PoolVector2Array( 675.771, 251.819, 686.883, 286.742, 712.281, 334.364, 751.966, 366.112, 801.176, 381.986, 845.623, 378.811, 896.42, 358.175, 928.168, 326.427, 953.566, 278.805, 956.741, 231.183, 944.042, 183.561, 920.231, 148.638, 871.021, 116.89, 823.399, 105.778, 778.952, 112.128, 742.442, 129.589, 707.519, 156.575, 682.12, 204.197 )

[node name="Light4" type="Polygon2D" parent="."]
position = Vector2( -292.841, -100.334 )
scale = Vector2( 0.438077, 0.438077 )
color = Color( 0.760784, 0.87451, 0.101961, 0 )
polygon = PoolVector2Array( 675.771, 251.819, 686.883, 286.742, 712.281, 334.364, 751.966, 366.112, 801.176, 381.986, 845.623, 378.811, 896.42, 358.175, 928.168, 326.427, 953.566, 278.805, 956.741, 231.183, 944.042, 183.561, 920.231, 148.638, 871.021, 116.89, 823.399, 105.778, 778.952, 112.128, 742.442, 129.589, 707.519, 156.575, 682.12, 204.197 )

[node name="breadboard" type="Sprite" parent="."]
position = Vector2( -107.634, 88.9292 )
scale = Vector2( 0.598301, 0.598301 )
texture = ExtResource( 2 )

[node name="Goal" type="RichTextLabel" parent="."]
margin_left = -459.061
margin_top = 193.633
margin_right = 293.939
margin_bottom = 234.633
theme = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Left button should control lamp 1 and 3, the right should control the rest"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLamp1" type="RichTextLabel" parent="."]
margin_left = -296.122
margin_top = 144.0
margin_right = -282.122
margin_bottom = 185.0
theme = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLamp2" type="RichTextLabel" parent="."]
margin_left = -178.264
margin_top = 68.795
margin_right = -164.264
margin_bottom = 109.795
theme = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "2
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLamp3" type="RichTextLabel" parent="."]
margin_left = -58.1605
margin_top = 144.0
margin_right = -44.1605
margin_bottom = 185.0
theme = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "3
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLamp4" type="RichTextLabel" parent="."]
margin_left = 58.5756
margin_top = 76.6523
margin_right = 72.5756
margin_bottom = 117.652
theme = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "4
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
